adaptive_istio_rate_limit/k8s/simulated/istio-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: local
    managed-by: trendmaster-ai
    simulated: 'true'
  name: istio-system
